# ExpertTalk

./: .gitignore  DESIGN.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: content_analyzer.py  orchestrator.py  person_searcher.py  ppt_generator.py  video_fetcher.py
backend/app/api/: routes.py  websocket.py
backend/app/models/: schemas.py
backend/app/utils/: cache.py  pdf_converter.py  project_store.py  whisper_client.py  youtube_client.py
backend/tests/: test_e2e.ps1  test_video_access.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: root.tsx  routes.ts
frontend/app/components/: app-header.tsx  mindmap-view.tsx  person-detail.tsx  processing-pipeline.tsx  video-card.tsx  video-detail.tsx  video-input.tsx  video-sidebar.tsx
frontend/app/hooks/: use-websocket.ts
frontend/app/lib/: api.ts  i18n.tsx
frontend/app/routes/: home.tsx  workspace.tsx
frontend/app/types/: index.ts
